basic CI pipeline w/ GitHub Actions
format:check command

npm ci

prettierignore

drop node 14

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepush": "npm run test",
     "prepublishOnly": "npm run build",
     "format": "prettier --config ./.prettierrc --write \"{*.js,**/*.js,*.ts,**/*.ts,*.json,**/*.json}\"",
+    "format:check": "prettier --config ./.prettierrc --check \"{*.js,**/*.js,*.ts,**/*.ts,*.json,**/*.json}\"",
     "commitlint-circle": "commitlint-circle",
     "semantic-release": "semantic-release"
   },
